# pythonanywhere-briefcase-plugin

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: index.md  tutorial.md
src/briefcase_pythonanywhere/: __init__.py  channel.py
src/pythonanywhere_briefcase_plugin/: __init__.py  channel.py
tests/: conftest.py  test_channel.py
